RuntimeConstraintDescriptorFactory and ConstraintDescriptionGenerator were doing similar tasks and had similar caching but were not sharing a common code path.  Now they are (see AbstractConstraintDescriptorGenerator).
I used FindBugs to find potential problems and remove instances of String where StringBuilder would be better, among other things.